# rss2telegram

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: bandit.yml  docker-image.yml  semgrep.yml  trivy.yml
rss2telegram/: main.py  models.py  utils.py
