[tool.poetry]
name = "rss2telegram"
version = "0.1.0"
description = ""
authors = ["Konstantin Romanov <k-rrr@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.1"
pydantic-settings = "^2.2.0"
feedparser = "^6.0.11"
beautifulsoup4 = "^4.12.3"
pytelegrambotapi = "^4.16.1"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
